get example working again on my linux machine (without docker).

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-- get demo running properly
+- get demo running properly using docker?
+- have keyboard interrupt in parent process trigger termination of children
 
 - have a development docker container that loads python code in a volume
 - relay.mesos should run executors as docker containers
